copilotに対して優先事項を設定できるデータの追加。使用しながら追加されていくと思われ。

--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -122,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
+    <None Include=".github\copilot-instructions.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
