📝 少し命名変更

--- a/.github/ISSUE_TEMPLATE/balance.yml
+++ b/.github/ISSUE_TEMPLATE/balance.yml
@@ -1,6 +1,6 @@
 name: バランス調整の提案
 title: "【バランス調整】 "
-description: "ゲームバランスに関する提案がある場合はこちら"
+description: "ゲームバランスに関する提案がある場合に"
 labels: 🚧バランス調整
 #assignees: " "
 
