--- a/.github/ISSUE_TEMPLATE/improve.yml
+++ b/.github/ISSUE_TEMPLATE/improve.yml
@@ -1,6 +1,6 @@
 name: 既存仕様の追加提案
 title: "【改善】 "
-description: "既存の仕様を変更したり、追加したい場合はこちら"
+description: "既存の仕様を変更したり、追加したい場合に"
 labels: 🔧要修正
 #assignees: " "
 
