--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -28,9 +28,10 @@
     <ClInclude Include="hedder\enemy\bullet.h" />
     <ClInclude Include="hedder\enemy\enemy.h" />
     <ClInclude Include="hedder\enemy\explosion.h" />
-    <ClInclude Include="hedder\enemy\node_base\attack.h" />
-    <ClInclude Include="hedder\enemy\node_base\death.h" />
-    <ClInclude Include="hedder\enemy\node_base\movement.h" />
+    <ClInclude Include="hedder\enemy\node\base.h" />
+    <ClInclude Include="hedder\enemy\node_tab\attack.h" />
+    <ClInclude Include="hedder\enemy\node_tab\death.h" />
+    <ClInclude Include="hedder\enemy\node_tab\movement.h" />
     <ClInclude Include="hedder\lib\audio.h" />
     <ClInclude Include="hedder\lib\easing.h" />
     <ClInclude Include="hedder\lib\mouse.h" />
@@ -71,9 +72,10 @@
     <ClCompile Include="cpp\enemy\bullet.cpp" />
     <ClCompile Include="cpp\enemy\enemy.cpp" />
     <ClCompile Include="cpp\enemy\explosion.cpp" />
-    <ClCompile Include="cpp\enemy\node_base\attack.cpp" />
-    <ClCompile Include="cpp\enemy\node_base\death.cpp" />
-    <ClCompile Include="cpp\enemy\node_base\movement.cpp" />
+    <ClCompile Include="cpp\enemy\node\base.cpp" />
+    <ClCompile Include="cpp\enemy\node_tab\attack.cpp" />
+    <ClCompile Include="cpp\enemy\node_tab\death.cpp" />
+    <ClCompile Include="cpp\enemy\node_tab\movement.cpp" />
     <ClCompile Include="cpp\lib\audio.cpp" />
     <ClCompile Include="cpp\lib\easing.cpp" />
     <ClCompile Include="cpp\lib\mouse.cpp" />
