--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -25,13 +25,18 @@
     <ClInclude Include="hedder\collider\collision.h" />
     <ClInclude Include="hedder\collider\cube.h" />
     <ClInclude Include="hedder\collider\sphere.h" />
+    <ClInclude Include="hedder\enemy\base_data\enemy_base.h" />
     <ClInclude Include="hedder\enemy\bullet.h" />
+    <ClInclude Include="hedder\enemy\dna_screen_script.h" />
     <ClInclude Include="hedder\enemy\enemy.h" />
     <ClInclude Include="hedder\enemy\explosion.h" />
+    <ClInclude Include="hedder\enemy\field_enemy.h" />
     <ClInclude Include="hedder\enemy\node\base.h" />
     <ClInclude Include="hedder\enemy\node_tab\attack.h" />
     <ClInclude Include="hedder\enemy\node_tab\death.h" />
     <ClInclude Include="hedder\enemy\node_tab\movement.h" />
+    <ClInclude Include="hedder\enemy\node_tab\dnatab_button.h" />
+    <ClInclude Include="hedder\enemy\node_tab\tab_base.h" />
     <ClInclude Include="hedder\lib\audio.h" />
     <ClInclude Include="hedder\lib\easing.h" />
     <ClInclude Include="hedder\lib\mouse.h" />
@@ -69,17 +74,23 @@
   <ItemGroup>
     <ClCompile Include="billboard.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="cpp\enemy\base_data\enemy_base.cpp" />
     <ClCompile Include="cpp\enemy\bullet.cpp" />
+    <ClCompile Include="cpp\enemy\dna_screen_script.cpp" />
     <ClCompile Include="cpp\enemy\enemy.cpp" />
     <ClCompile Include="cpp\enemy\explosion.cpp" />
+    <ClCompile Include="cpp\enemy\field_enemy.cpp" />
     <ClCompile Include="cpp\enemy\node\base.cpp" />
     <ClCompile Include="cpp\enemy\node_tab\attack.cpp" />
     <ClCompile Include="cpp\enemy\node_tab\death.cpp" />
+    <ClCompile Include="cpp\enemy\node_tab\dnatab_button.cpp" />
     <ClCompile Include="cpp\enemy\node_tab\movement.cpp" />
+    <ClCompile Include="cpp\enemy\node_tab\tab_base.cpp" />
     <ClCompile Include="cpp\lib\audio.cpp" />
     <ClCompile Include="cpp\lib\easing.cpp" />
     <ClCompile Include="cpp\lib\mouse.cpp" />
     <ClCompile Include="cpp\object\game_object.cpp" />
+    <ClCompile Include="cpp\object\panel.cpp" />
     <ClCompile Include="cpp\object\ui\button.cpp" />
     <ClCompile Include="cpp\object\ui\image.cpp" />
     <ClCompile Include="cpp\object\ui\in_game\enemy_node.cpp" />
