--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="hedder\collider\cube.h" />
     <ClInclude Include="hedder\collider\sphere.h" />
     <ClInclude Include="hedder\enemy\base_data\enemy_base.h" />
+    <ClInclude Include="hedder\enemy\base_data\slime.h" />
     <ClInclude Include="hedder\enemy\bullet.h" />
     <ClInclude Include="hedder\enemy\dna_screen_script.h" />
     <ClInclude Include="hedder\enemy\enemy.h" />
@@ -77,6 +78,7 @@
     <ClCompile Include="billboard.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="cpp\enemy\base_data\enemy_base.cpp" />
+    <ClCompile Include="cpp\enemy\base_data\slime.cpp" />
     <ClCompile Include="cpp\enemy\bullet.cpp" />
     <ClCompile Include="cpp\enemy\dna_screen_script.cpp" />
     <ClCompile Include="cpp\enemy\enemy.cpp" />
