--- a/GenomeHacker.vcxproj
+++ b/GenomeHacker.vcxproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <ClCompile Include="billboard.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="cpp\collider\collision.cpp" />
     <ClCompile Include="cpp\enemy\base_data\enemy_base.cpp" />
     <ClCompile Include="cpp\enemy\base_data\slime.cpp" />
     <ClCompile Include="cpp\enemy\bullet.cpp" />
